--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <title>18 site</title>
 
@@ -71,6 +72,28 @@
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
-  </div>
+</div>
 
-   
+<div class="container">
+    <div class="row">
+      <div class="col-8 border">
+        <h2> El volantín</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque natus officiis facilis exercitationem magni mollitia neque illum aut possimus nemo at voluptatum placeat cupiditate tenetur, perspiciatis obcaecati sapiente dolorum aperiam?</p>
+      </div>
+      <div class="col-4 border">
+        <img src="https://dojiw2m9tvv09.cloudfront.net/10302/product/trompo4717.jpg" alt="trompo" style="width:18rem">
+      </div>
+    </div>
+</div>
+
+<footer class="footer mt-5 py-3 bg-primary text-white">
+    <div class="container">
+        <span>Comunicate con nosotros al +569-63441-859</span>
+    </div>
+
+</footer>
+
+<a href="https://api.whatsapp.com/send?phone=56994376709&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20clases%20."
+      class="whatsapp__float" target="_blank">
+      <i class="fa fa-whatsapp my-float"></i>
+    </a>
